@@ -36,6 +36,9 @@ public option jedit_symbols_search_limit : int = 50
 public option jedit_timing_threshold : real = 0.1
   -- "default threshold for timing display (seconds)"
 
+public option jedit_text_overview : bool = true
+  -- "paint text overview column"
+
 
 section "Indentation"
 
